--- a/SuperIOS/Base.lproj/Main.storyboard
+++ b/SuperIOS/Base.lproj/Main.storyboard
@@ -17,26 +17,26 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="454" estimatedRowHeight="512" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="53W-Wm-2iF">
-                                <rect key="frame" x="0.0" y="103" width="385" height="715"/>
+                                <rect key="frame" x="0.0" y="103" width="393" height="749"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <searchBar key="tableHeaderView" contentMode="redraw" id="w1N-0G-gWf">
-                                    <rect key="frame" x="0.0" y="0.0" width="385" height="44"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" id="jnI-oZ-QeL">
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="56"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                     <textInputTraits key="textInputTraits"/>
                                     <connections>
-                                        <outlet property="delegate" destination="BYZ-38-t0r" id="j4I-lC-4uH"/>
+                                        <outlet property="delegate" destination="BYZ-38-t0r" id="14B-ch-oWQ"/>
                                     </connections>
                                 </searchBar>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="454" id="Of8-YM-s6E" customClass="SuperHeroViewCell" customModule="SuperIOS" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="94" width="385" height="454"/>
+                                        <rect key="frame" x="0.0" y="106" width="393" height="454"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Of8-YM-s6E" id="i0x-oc-kGG" customClass="UITableView">
-                                            <rect key="frame" x="0.0" y="0.0" width="385" height="454"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="454"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Fdx-Wh-IV7">
-                                                    <rect key="frame" x="46" y="32" width="289" height="322"/>
+                                                    <rect key="frame" x="47" y="32" width="295" height="322"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TbH-86-cdh">
@@ -61,16 +61,16 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="53W-Wm-2iF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="9P9-Hj-yjd"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="53W-Wm-2iF" secondAttribute="trailing" constant="8" id="EBD-38-okD"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="53W-Wm-2iF" secondAttribute="bottom" id="hgu-XG-atz"/>
-                            <constraint firstItem="53W-Wm-2iF" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="yiq-l2-d9w"/>
+                            <constraint firstItem="53W-Wm-2iF" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="D73-Fw-NDm"/>
+                            <constraint firstItem="53W-Wm-2iF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="b4f-A4-GsT"/>
+                            <constraint firstItem="53W-Wm-2iF" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="caF-AQ-LDy"/>
+                            <constraint firstAttribute="bottom" secondItem="53W-Wm-2iF" secondAttribute="bottom" id="lqh-1y-P28"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Super Heroes" id="4MK-26-Nqn"/>
                     <connections>
+                        <outlet property="searchBar" destination="jnI-oZ-QeL" id="Tqp-b9-rLP"/>
                         <outlet property="tableView" destination="53W-Wm-2iF" id="gjV-Kn-dmF"/>
-                        <outlet property="viewFather" destination="8bC-Xf-vdC" id="kBu-bf-TXX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
